# nano-vllm-labs

./: .gitignore  Makefile  README.md  bench.py  bench_prefix.py  example.py  pyproject.toml
nanovllm_labs/: __init__.py  base_sequence.py  bench_entrypoint.py  bench_specs.py  bench_utils.py  benchmark_data.py
nanovllm_labs/common/: __init__.py  activation.py  attention.py  block_manager.py  context.py  embed_head.py  loader.py  model_runner.py  qwen3_blocks.py  rotary_embedding.py  sampler.py  sequence.py
nanovllm_labs/common/engine/: __init__.py  llm_engine.py
nanovllm_labs/common/layers/: __init__.py  activation.py  attention.py  embed_head.py  linear.py  rmsnorm.py  sampler.py
nanovllm_labs/common/models/: __init__.py  qwen3.py
nanovllm_labs/common/runtime/: __init__.py  block_manager.py  scheduler.py  sequence.py
nanovllm_labs/common/utils/: loader.py
nanovllm_labs/lab1/: README.md  __init__.py
nanovllm_labs/lab1/engine/: __init__.py
nanovllm_labs/lab1_solution/engine/: llm_engine.py  model_runner.py  sequence.py
nanovllm_labs/lab2/: README.md  __init__.py
nanovllm_labs/lab2/engine/: __init__.py
nanovllm_labs/lab2_solution/engine/: llm_engine.py  model_runner.py  sequence.py
nanovllm_labs/lab2_solution/layers/: attention.py  embed_head.py  rmsNorm.py  rotary_embedding.py  sampler.py
nanovllm_labs/lab3/: README.md  __init__.py
nanovllm_labs/lab3/engine/: __init__.py
nanovllm_labs/lab5/: README.md
nanovllm_labs/lab5_solution/: __init__.py
nanovllm_labs/lab6_solution/: README.md  __init__.py
nanovllm_labs/lab7_solution/: README.md
(+46 files in other folders)
