[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-labs"
version = "0.0.1"
authors = [{ name = "Alex Lee" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Step-by-step labs for learning nano-vllm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.9.1",
    "triton==3.5.1",
    "transformers>=4.51.0,<5",
    "flash-attn==2.8.3",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/alexlee-dev/nano-vllm-labs"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm_labs*"]
